# git-remote-s3

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  git_s3.rs  lib.rs  main.rs
src/git_s3/: cmd.rs  fetch.rs  mod.rs  push.rs  remote.rs  run.rs  util.rs
