[package]
name = "git-remote-s3"
version = "0.1.0"
authors = ["Joseph Voss <jvoss@josephvoss.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0"
stderrlog = "0.4"
log = "0.4"
rust-s3 = "0.26.0"
aws-creds = "0.26.0"
